prqlc/crates/main/src/semantic/resolver/snapshots/prqlc_main__semantic__resolver__test__functions_pipeline.snap
---
source: prqlc/crates/main/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            from a\n            derive one = (foo | sum)\n            \"#).unwrap()"
---
- RqOperator:
    name: std.sum
    args:
      - Ident:
          - this
          - a
          - foo
        ty:
          kind:
            Array:
              kind:
                Singleton: "Null"
              name: ~
          name: array
  alias: one
  ty:
    kind:
      Union:
        - - int
          - kind:
              Primitive: Int
            name: int
        - - float
          - kind:
              Primitive: Float
            name: float
    name: ~

