prqlc/crates/main/src/semantic/resolver/snapshots/prqlc_main__semantic__resolver__test__named_args.snap
---
source: prqlc/crates/main/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            let add_one = x to:1 -> x + to\n\n            from foo_table\n            derive {\n                added = add_one bar to:3,\n                added_default = add_one bar\n            }\n            \"#).unwrap()"
---
- RqOperator:
    name: std.add
    args:
      - Ident:
          - this
          - foo_table
          - bar
        ty:
          kind:
            Union:
              - - int
                - kind:
                    Primitive: Int
                  name: int
              - - float
                - kind:
                    Primitive: Float
                  name: float
              - - timestamp
                - kind:
                    Primitive: Timestamp
                  name: timestamp
              - - date
                - kind:
                    Primitive: Date
                  name: date
      - Literal:
          Integer: 3
        ty:
          kind:
            Primitive: Int
          lineage: 207
  alias: added
  ty:
    kind:
      Union:
        - - int
          - kind:
              Primitive: Int
            name: int
        - - float
          - kind:
              Primitive: Float
            name: float
        - - timestamp
          - kind:
              Primitive: Timestamp
            name: timestamp
        - - date
          - kind:
              Primitive: Date
            name: date
- RqOperator:
    name: std.add
    args:
      - Ident:
          - this
          - foo_table
          - bar
        ty:
          kind:
            Union:
              - - int
                - kind:
                    Primitive: Int
                  name: int
              - - float
                - kind:
                    Primitive: Float
                  name: float
              - - timestamp
                - kind:
                    Primitive: Timestamp
                  name: timestamp
              - - date
                - kind:
                    Primitive: Date
                  name: date
      - Literal:
          Integer: 1
        ty:
          kind:
            Primitive: Int
          lineage: 311
  alias: added_default
  ty:
    kind:
      Union:
        - - int
          - kind:
              Primitive: Int
            name: int
        - - float
          - kind:
              Primitive: Float
            name: float
        - - timestamp
          - kind:
              Primitive: Timestamp
            name: timestamp
        - - date
          - kind:
              Primitive: Date
            name: date

